# agent-hive

./: .agent-config.json  .bandit  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .quality-gates.json  AGENTS.md  AGENT_COMMUNICATION_ANALYSIS.md  AGENT_COORDINATION_HUB_PROTOCOL.md  AGENT_FEEDBACK_ANALYSIS.md  AGENT_REBASE_COORDINATION.md  AGENT_REQUIREMENTS.md  AGENT_STATUS_AND_WORKFLOW_ANALYSIS.md  API_REFERENCE.md  API_REFERENCE_clean.md  ARCHITECTURE.md  BACKLOG.md  BENCHMARKS.md  CLAUDE.md  CLAUDE_MD_RECREATION_PLAN.md  CLAUDE_MD_RECREATION_PLAN_REFINED.md  CLEANUP_PLAN.md  CODING_STANDARDS_AND_BEST_PRACTICES.md  COMMUNICATION_SYSTEM_FIX.md  COORDINATION_STATUS_REPORT.md  CRISIS_DELEGATION_PLAN.md  CRISIS_RESPONSE_PLAN.md  CRISIS_STATUS_DASHBOARD.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_XP_VIOLATION_ALERT.md  CUSTOM_COMMANDS_AUDIT.md  DASHBOARD_GAP_ANALYSIS.md  DAY1_STRIPE_RESEARCH.md  DAY2_NOTION_RESEARCH.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ESSENTIAL_KNOWLEDGE_ANALYSIS.md  (+154 more)
.claude/: __init__.py  accountability_config.json  agent_CLAUDE_template.md  agent_completions.jsonl  enforcement_config.json  hook_system.py  leanvibe.yaml  orchestrator.py  task_distributor.py
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS  pull_request_template.md
.worktree-archive/: frontend-Jul-16-1222.info  infrastructure-Jul-16-1300.info  infrastructure-Jul-17-0822.info  infrastructure-Jul-17-0945.info  infrastructure-Jul-17-0946.info  infrastructure-Jul-17-1327.info  integration-specialist-Jul-16-1220.info  integration-specialist-Jul-16-1247.info  integration-specialist-Jul-17-0946.info  integration-specialist-Jul-17-1327.info  integration-specialist-Jul-17-1502.info  monitoring-Jul-17-0824.info  monitoring-Jul-17-0946.info  performance-Jul-16-1301.info  performance-Jul-17-1327.info  service-mesh-Jul-16-1221.info
advanced_orchestration/: __init__.py  analytics_dashboard.py  cli_integration.py  continuous_improvement.py  enhanced_coordination.py  feedback_loops.py  models.py  (+5 more)
(+1254 files in other folders)
