[project]
name = "leanvibe-orchestrator"
version = "0.1.0"
description = "AI orchestration system for XP-driven MVP development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.32",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.1",
    "asyncio-mqtt>=0.11.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "numpy>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "types-requests>=2.32.4.20250611",
    "scikit-learn>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.1",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
